--- a/css/styles.css
+++ b/css/styles.css
@@ -983,7 +983,7 @@ span {
 .footer-button {
   width: 200px;
   height: 50px;
-  position: absolute;
+  position: relative;
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -1067,6 +1067,19 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* transition: fill 3250ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.close-icon {
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close,
+.close-icon:hover,
+.modal-close,
+.close-icon :focus {
+  fill: #2196f3;
 }
 
 .is-hidden {
@@ -1085,10 +1098,11 @@ span {
   letter-spacing: 0.03em;
 
   color: #212121;
-  margin-bottom: 30px;
+  margin-bottom: 12px;
 }
 
 .modal-form {
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input {
@@ -1104,11 +1118,12 @@ span {
 }
 
 .modal-form-field {
-  margin-bottom: 28px;
+  margin-bottom: 10px;
 }
 
 .modal-input-wrap {
   position: relative;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-icon {
@@ -1116,6 +1131,15 @@ span {
   top: 50%;
   transform: translateY(-50%);
   left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-wrap:hover,
+.modal-input-wrap:focus {
+  border: #2196f3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  fill: #2196f3;
 }
 
 .modal-input::placeholder {
@@ -1192,4 +1216,65 @@ span {
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+.modal-check-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+  color: #757575;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.modal-check-text .check-span {
+  width: 16px;
+  height: 15px;
+  background: #ffffff;
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2); */
+  border-radius: 2px;
+
+  border: 0.2px solid #212121;
+  margin-right: 8px;
+}
+
+.check-span {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.icon-check {
+  fill: transparent;
+}
+
+.modal-check:checked + .modal-check-text check-span {
+  background-color: #ffffff;
+  border: none;
+}
+
+.modal-check:checked + .modal-check-text .icon-check {
+  fill: #ffffff;
+  background-color: #2196f3;
+}
+
+.policy-text {
+  text-decoration-skip-ink: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+
+  color: #2196f3;
 }
