--- a/css/styles.css
+++ b/css/styles.css
@@ -989,6 +989,7 @@ span {
   border-radius: 4px;
   margin-left: 12px;
   cursor: pointer;
+  border: none;
 }
 
 .footer-button-text {
@@ -1067,19 +1068,24 @@ span {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   /* transition: fill 3250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  outline: none;
 }
 
 .close-icon {
+  min-width: 18px;
+  height: 18px;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* border-radius: 50%; */
+  /* outline: none; */
 }
 
-.modal-close,
-.close-icon:hover,
-.modal-close,
-.close-icon :focus {
+.modal-close .close-icon:hover,
+.modal-close .close-icon:focus {
   fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .is-hidden {
@@ -1098,7 +1104,7 @@ span {
   letter-spacing: 0.03em;
 
   color: #212121;
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
 }
 
 .modal-form {
@@ -1112,13 +1118,13 @@ span {
   border: 1px solid rgba(33, 33, 33, 0.2);
   /* box-sizing: border-box; */
   border-radius: 4px;
-  padding-left: 12px;
+  padding-left: 42px;
   padding-right: 12px;
   background-color: transparent;
 }
 
 .modal-form-field {
-  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .modal-input-wrap {
@@ -1134,9 +1140,15 @@ span {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.input-icon:focus {
+  fill: #2196f3;
+}
+
 .modal-input-wrap:hover,
-.modal-input-wrap:focus {
-  border: #2196f3;
+.modal-input:hover,
+.modal-input-wrap:focus,
+.modal-input:focus {
+  border-color: #2196f3;
   box-sizing: border-box;
   border-radius: 4px;
   fill: #2196f3;
@@ -1190,8 +1202,7 @@ span {
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
-  line-height: 30px;
-  /* identical to box height, or 187% */
+  line-height: 1.87;
 
   display: flex;
   align-items: center;
@@ -1199,14 +1210,16 @@ span {
   justify-content: center;
   margin: 0 auto;
   letter-spacing: 0.06em;
-
+  cursor: pointer;
   color: #ffffff;
-
+  outline: none;
+  border: none;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   min-width: 200px;
   height: 50px;
+  margin-top: 30px;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1239,9 +1252,8 @@ span {
   background: #ffffff;
   /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2); */
-  border-radius: 2px;
+  /* border-radius: 4px; */
 
-  border: 0.2px solid #212121;
   margin-right: 8px;
 }
 
@@ -1250,10 +1262,13 @@ span {
   align-items: center;
   text-align: center;
   justify-content: center;
+  border: none;
 }
 
 .icon-check {
   fill: transparent;
+  border-radius: 2px;
+  border: 0.2px solid #212121;
 }
 
 .modal-check:checked + .modal-check-text check-span {
@@ -1264,6 +1279,8 @@ span {
 .modal-check:checked + .modal-check-text .icon-check {
   fill: #ffffff;
   background-color: #2196f3;
+  border-color: #2196f3;
+  border: none;
 }
 
 .policy-text {
