--- a/css/styles.css
+++ b/css/styles.css
@@ -1061,7 +1061,7 @@ span {
   right: 8px;
   width: 30px;
   height: 30px;
-  background-color: #ffffff;
+  background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   /* box-sizing: border-box; */
@@ -1069,7 +1069,7 @@ span {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  /* transition: fill 3250ms cubic-bezier(0.4, 0, 0.2, 1); */
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
 }
 
@@ -1078,14 +1078,10 @@ span {
   height: 18px;
   fill: #000000;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* border-radius: 50%; */
-  /* outline: none; */
 }
 
-.modal-close .close-icon:hover,
-.modal-close .close-icon:focus {
+.modal-close :hover {
   fill: #2196f3;
-  border-color: #2196f3;
 }
 
 .is-hidden {
@@ -1104,7 +1100,7 @@ span {
   letter-spacing: 0.03em;
 
   color: #212121;
-  /* margin-bottom: 12px; */
+  margin-bottom: 12px;
 }
 
 .modal-form {
@@ -1124,7 +1120,7 @@ span {
 }
 
 .modal-form-field {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .modal-input-wrap {
